# wigtools

./: .coveragerc  .gitignore  .tagitrc  README.md  pyproject.toml  tox.ini
tests/: test_wiggle.py  test_wiggle_block.py  test_wiggle_funcs.py  test_wiggle_wiggle.py
wigtools/: __init__.py  __main__.py  functional.py  wiggle.py
