[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "wigtools"
version = "0.0.1"
description = "A set of tools for wiggle file"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/wigtools"
repository = "https://github.com/pwwang/wigtools"

[tool.poetry.dependencies]
python = "^3.6"
diot = "*"
pyparam = "*"
attrs = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
cmdy = "*"
remotedata = "*"

[tool.poetry.scripts]
wigtools = "wigtools:main"
